Finish support for multi-war life tracking. Added 'get' and 'delete' Admin commands.